--- a/kubernetes-manifests/redis.yaml
+++ b/kubernetes-manifests/redis.yaml
@@ -10,6 +10,17 @@ spec:
     metadata:
       labels:
         app: redis-cart
+      annotations:
+        ad.datadoghq.com/redis.logs: '[{"source":"redis","service":"redis"}]'
+        ad.datadoghq.com/redis.check_names: '["redisdb"]'
+        ad.datadoghq.com/redis.init_configs: '[{}]'
+        ad.datadoghq.com/redis.instances: |
+          [
+            {
+              "host": "%%host%%",
+              "port":"6379"
+            }
+          ]
     spec:
       containers:
       - name: redis
