--- a/src/adservice/Dockerfile
+++ b/src/adservice/Dockerfile
@@ -4,6 +4,9 @@ RUN GRPC_HEALTH_PROBE_VERSION=v0.3.2 && \
     wget -qO/bin/grpc_health_probe https://github.com/grpc-ecosystem/grpc-health-probe/releases/download/${GRPC_HEALTH_PROBE_VERSION}/grpc_health_probe-linux-amd64 && \
     chmod +x /bin/grpc_health_probe
 
+RUN mkdir -p /opt/datadog && \
+    wget -qO /opt/datadog/dd-java-agent.jar 'https://repository.sonatype.org/service/local/artifact/maven/redirect?r=central-proxy&g=com.datadoghq&a=dd-java-agent&v=LATEST'
+
 WORKDIR /app
 
 COPY ["build.gradle", "gradlew", "./"]
