--- a/src/cartservice/Dockerfile
+++ b/src/cartservice/Dockerfile
@@ -18,6 +18,10 @@ RUN GRPC_HEALTH_PROBE_VERSION=v0.3.2 && \
     wget -qO/bin/grpc_health_probe https://github.com/grpc-ecosystem/grpc-health-probe/releases/download/${GRPC_HEALTH_PROBE_VERSION}/grpc_health_probe-linux-amd64 && \
     chmod +x /bin/grpc_health_probe
 
+RUN mkdir -p /opt/datadog && \
+    wget -qO- https://github.com/DataDog/dd-trace-dotnet/releases/download/v1.18.0/datadog-dotnet-apm-1.18.0-musl.tar.gz \
+    | tar xzf - -C /opt/datadog
+
 RUN echo 'http://dl-cdn.alpinelinux.org/alpine/v3.8/main' >> /etc/apk/repositories && \
     apk update --no-cache && \
     apk add --no-cache bash libc6-compat=1.1.19-r11
