--- a/src/cartservice/cartservice.csproj
+++ b/src/cartservice/cartservice.csproj
@@ -19,6 +19,9 @@
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.1.0" />
     <PackageReference Include="NLog" Version="4.6.5" />
     <PackageReference Include="NLog.Extensions.Logging" Version="1.5.1" />
+    <PackageReference Include="Datadog.Trace" Version="1.18.0" />
+    <!-- <PackageReference Include="Datadog.Trace.OpenTracing" Version="1.18.0" />
+    <PackageReference Include="OpenTracing.Contrib.Grpc" Version="0.3.0" /> -->
   </ItemGroup>
 
   <ItemGroup>
