--- a/kubernetes-manifests/shippingservice.yaml
+++ b/kubernetes-manifests/shippingservice.yaml
@@ -10,6 +10,8 @@ spec:
     metadata:
       labels:
         app: shippingservice
+      annotations:
+        ad.datadoghq.com/server.logs: '[{"source":"go","service":"shippingservice", "sourcecategory":"sourcecode", "file":"file"}]'
     spec:
       containers:
       - name: server
@@ -19,6 +21,16 @@ spec:
         env:
         - name: PORT
           value: "50051"
+        - name: DD_AGENT_HOST
+          valueFrom:
+            fieldRef:
+              fieldPath: status.hostIP
+        - name: DD_ENV
+          value: "prod"
+        - name: DD_SERVICE
+          value: "shippingservice"
+        - name: DD_VERSION
+          value: "1.0.0"
         readinessProbe:
           periodSeconds: 5
           exec:
@@ -27,12 +39,12 @@ spec:
           exec:
             command: ["/bin/grpc_health_probe", "-addr=:50051"]
         resources:
-          requests:
-            cpu: 100m
-            memory: 64Mi
-          limits:
-            cpu: 200m
-            memory: 128Mi
+          # requests:
+          #   cpu: 100m
+          #   memory: 64Mi
+          # limits:
+          #   cpu: 200m
+          #   memory: 128Mi
 ---
 apiVersion: v1
 kind: Service
