--- a/kubernetes-manifests/emailservice.yaml
+++ b/kubernetes-manifests/emailservice.yaml
@@ -10,6 +10,8 @@ spec:
     metadata:
       labels:
         app: emailservice
+      annotations:
+        ad.datadoghq.com/server.logs: '[{"source":"python","service":"emailservice", "sourcecategory":"sourcecode", "file":"file"}]'
     spec:
       terminationGracePeriodSeconds: 5
       containers:
@@ -20,6 +22,24 @@ spec:
         env:
         - name: PORT
           value: "8080"
+        - name: DD_AGENT_HOST
+          valueFrom:
+            fieldRef:
+              fieldPath: status.hostIP
+        - name: DD_ENV
+          value: "prod"
+        - name: DD_SERVICE
+          value: "emailservice"
+        - name: DD_VERSION
+          value: "1.0.0"
+        - name: DD_TRACE_ENABLED
+          value: "true"
+        - name: DD_LOGS_INJECTION
+          value: "true"
+        - name: DD_TRACE_ANALYTICS_ENABLED
+          value: "true"
+        - name: DD_PROFILING_ENABLED
+          value: "true"
         readinessProbe:
           periodSeconds: 5
           exec:
@@ -29,12 +49,12 @@ spec:
           exec:
             command: ["/bin/grpc_health_probe", "-addr=:8080"]
         resources:
-          requests:
-            cpu: 100m
-            memory: 64Mi
-          limits:
-            cpu: 200m
-            memory: 128Mi
+          # requests:
+          #   cpu: 100m
+          #   memory: 64Mi
+          # limits:
+          #   cpu: 200m
+          #   memory: 128Mi
 ---
 apiVersion: v1
 kind: Service
