Add gcp profile to push to Google image repository `skaffold dev --profile=gcp --status-check=false --default-repo=gcr.io/...`

--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -39,7 +39,10 @@ deploy:
     - ./kubernetes-manifests/*.yaml
 
 profiles:
-
+- name: gcp
+  build:
+    local:
+      push: true
 # "gcb" profile allows building and pushing the images
 # on Google Container Builder without requiring docker
 # installed on the developer machine. However, note that
