--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -48,6 +48,10 @@ deploy:
 
 profiles:
 
+- name: gcp
+  build:
+    local:
+      push: true
 # "gcb" profile allows building and pushing the images
 # on Google Container Builder without requiring docker
 # installed on the developer machine. However, note that
